snackager/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snackager
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80": {}}}'
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
